--- a/src/app/shared/widgets/custominputfield/custominputfield.component.html
+++ b/src/app/shared/widgets/custominputfield/custominputfield.component.html
@@ -1,3 +1,3 @@
 <mat-form-field>
-    <input matInput [placeholder]="placeholder" [type]="type">
+    <input matInput [placeholder]="placeholder" [formControl]="control" [type]="type">
   </mat-form-field>
