--- a/src/app/shared/widgets/custombutton/custombutton.component.html
+++ b/src/app/shared/widgets/custombutton/custombutton.component.html
@@ -1,1 +1,1 @@
-<button class="button-container" mat-raised-button>{{label}}</button>
+<button class="button-container" mat-raised-button color="primary">{{label}}</button>
